_sass/content.scss
.content {
  p { min-height: $font-size-base * $line-height-base; }
  h1 { min-height: $h1-font-size * $headings-line-height; }
  h2 {
    min-height: $h2-font-size * $headings-line-height;
    text-transform: uppercase !important;
    margin-top:2rem;
    margin-bottom:1.5rem;
    font-family: "Open Sans", sans-serif;
  }

  h3 {
    min-height: $h3-font-size * $headings-line-height;
    font-weight: $font-weight-bold;
    margin: 2rem 0 1.5rem;
  }

  h4 { min-height: $h4-font-size * $headings-line-height; }
  h5 { min-height: $h5-font-size * $headings-line-height; }
  h6 { min-height: $h6-font-size * $headings-line-height; }

  iframe { border: 0; }

  audio { width: 100%; }

  img,
  video,
  iframe {
    @extend .img-fluid;
    height: auto;
  }

  & > * {
    margin-bottom: 1rem;

    &:last-child {
      margin-bottom: 0;
    }
  }

  li p {
    margin-bottom: 0;
  }
}

